--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i',\n",
+       " 'i',\n",
+       " 'o',\n",
+       " 'i',\n",
+       " 'o',\n",
+       " 'e',\n",
+       " 'a',\n",
+       " 'e',\n",
+       " 'e',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'a',\n",
+       " 'o',\n",
+       " 'o',\n",
+       " 'u',\n",
+       " 'e',\n",
+       " 'o',\n",
+       " 'o',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'i']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('[aeiou]', text)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "puppy\n",
+      "puppies\n",
+      "puppy\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in text.split():\n",
+    "    if re.search(\"pupp\", i):\n",
+    "        print (i)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,19 +120,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"I ran the relay race the only way I knew how to run it.\""
+    "text = \"I ran thre relay race the only way I knew how to run it.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ran\n",
+      "run\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in text.split():\n",
+    "    if (re.findall(\"r[au]n\", i)):\n",
+    "        print (i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +156,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ran\n",
+      "thre\n",
+      "relay\n",
+      "race\n",
+      "run\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"for i in text.split():\n",
+    "    if (re.findall('[\\br\\b]', i)):\n",
+    "        print (i)\"\"\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
