--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "'Grocery list: bananas, bread, brownie mix, broccoli...'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,9 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -116,6 +124,13 @@
     "radius = 4.5\n",
     "\n",
     "def area(x, pi = math.pi):\n",
+    "    a=(x*x)*pi\n",
+    "    return a\n",
+    "print(string1,radius,string2,area(radius))\n",
+    "    \n",
+    "    # Sample Output: 78.53981633\n",
+    "    \n",
+    "    \n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
@@ -142,10 +157,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Some': 2,\n",
+       " 'say': 3,\n",
+       " 'the': 1,\n",
+       " 'world': 1,\n",
+       " 'will': 1,\n",
+       " 'end': 1,\n",
+       " 'in': 2,\n",
+       " 'fire,': 1,\n",
+       " 'ice.': 1,\n",
+       " 'From': 1,\n",
+       " 'what': 1,\n",
+       " 'I’ve': 1,\n",
+       " 'tasted': 1,\n",
+       " 'of': 2,\n",
+       " 'desire': 1,\n",
+       " 'I': 3,\n",
+       " 'hold': 1,\n",
+       " 'with': 1,\n",
+       " 'those': 1,\n",
+       " 'who': 1,\n",
+       " 'favor': 1,\n",
+       " 'fire.': 1,\n",
+       " 'But': 1,\n",
+       " 'if': 1,\n",
+       " 'it': 1,\n",
+       " 'had': 1,\n",
+       " 'to': 1,\n",
+       " 'perish': 1,\n",
+       " 'twice,': 1,\n",
+       " 'think': 1,\n",
+       " 'know': 1,\n",
+       " 'enough': 1,\n",
+       " 'hate': 1,\n",
+       " 'To': 1,\n",
+       " 'that': 1,\n",
+       " 'for': 1,\n",
+       " 'destruction': 1,\n",
+       " 'ice': 1,\n",
+       " 'Is': 1,\n",
+       " 'also': 1,\n",
+       " 'great': 1,\n",
+       " 'And': 1,\n",
+       " 'would': 1,\n",
+       " 'suffice.': 1}"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\n",
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
     "From what I’ve tasted of desire\n",
@@ -156,7 +226,13 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "#d={\"key\":\"value\"}\n",
+    "\n",
+    "s=poem.strip().split()\n",
+    "\n",
+    "d=dict((i, s.count(i)) for i in s)\n",
+    "d"
    ]
   },
   {
@@ -168,9 +244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i was angry with my friend i told my wrath my wrath did end i was angry with my foe i told it not my wrath did grow and i waterd it in fears night morning with my tears and i sunned it with smiles and with soft deceitful wiles and it grew both day and night till it bore an apple bright and my foe beheld it shine and he knew that it was mine and into my garden stole when the night had veild the pole in the morning glad i see my foe outstretched beneath the tree\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -194,7 +278,18 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
+    "\n",
+    "words=re.findall(\"\\w+\",poem)\n",
+    "\n",
+    "words=[i.lower() for i in words]\n",
+    "\n",
+    "result=\" \".join(words)\n",
+    "print(result)"
    ]
   },
   {
