--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -102,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['ran', 'run']\n"
      ]
     }
    ],
@@ -258,10 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['peaks', 'people', 'realize', 'breathtaking', 'Nearly']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall('(\\w*ea\\w*|\\w*eo\\w*)',text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,10 +291,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(re.findall('[[:upper:]]+\\w*',text))   #no se me imprime. No sé por qué. EN  regex101 funciona  \n",
+    "print(re.findall('[A-Z]\\w*',text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,10 +316,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy Roosevelt', 'Abraham Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall('[A-Z]\\w* [A-Z]\\w*',text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -311,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,10 +351,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['\"I will bet you $50 I can get the bartender to give me a free drink.\"', '\"I am in!\"']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall('\\\".*?\\\"',text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,19 +375,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"There were 30 students in the class. Of the 30 students, 14 were male and 16 were female. Only 10 students got A's on the exam.\"\n"
+    "text = \"There were 30 students in the class. Of the 30 students, 14 were male and 16 were female. Only 10 students got A's on the exam.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876', '93', '2289', '847', '789', '0984', '098', '32', '5295', '987', '222', '0901']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall('\\d+',text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -357,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,10 +420,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876-93-2289', '098-32-5295']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall('\\d{3}-\\d{2}-\\d{4}',text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -383,16 +444,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['(847)789-0984', '(987)222-0901']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall('(\\(\\d{3}\\)\\d{3}-\\d{4})',text))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 15. Use a regular expression to find and extract all the formatted numbers (both social security and phone) from the text below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876-93-2289', '(847)789-0984', '098-32-5295', '(987)222-0901']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall('(\\d{3}-\\d{2}-\\d{4}|\\(\\d{3}\\)\\d{3}-\\d{4})',text))"
    ]
   },
   {
